--- a/templates/.project
+++ b/templates/.project
@@ -8,5 +8,6 @@
 	<buildSpec>
 	</buildSpec>
 	<natures>
+		<nature>org.python.pydev.django.djangoNature</nature>
 	</natures>
 </projectDescription>
